# learn-opencl

./: CMakeLists.txt  README  main.cpp
